-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
None
-
OS X 10.8.5 (Mountain Lion) (but should be reproducible on any platform)
-
ffc8aac684e97bad1fb598883fa05ae66f7f1e4c
The bounding rectangle as returned by QGraphicsView::boundingRect() does not seem to take the device pixel ratio into account, as reported by QPixmap::devicePixelRatio().
How to reproduce:
- Compile the attached example code (qmake;make)
- Run HiDPIPixmapGraphicsView.app
- BUG: The pixmap is properly scaled (original size: 512x512 pixels - that is, on a normal (non-HiDPI) monitor it appears as 256x256 pixel equivalent image), but the bounding box (drawn as red rectangle) is not
| For Gerrit Dashboard: QTBUG-37008 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 80689,1 | Fix high-dpi QGraphicsPixmapItem bounding rects. | stable | qt/qtbase | Status: MERGED | +2 | 0 |