Fix high-dpi QGraphicsPixmapItem bounding rects.

QGraphicsPixmapItem did not take the pixmaps
devicePixelRatio into account when calculating the
bounding rect. As a consequence, a 512x512@2x pixmap
would get a 512x512 bounding size instead of the
correct 256x256 bounding size.

Task-number: QTBUG-37008
Change-Id: I266e418b7e5d92bf1d4c96bd9380a27708dc2b4a
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>
Reviewed-by: Andreas Aardal Hanssen <andreas@hanssen.name>

cregit: ffc8aac684e97bad1fb598883fa05ae66f7f1e4c https://github.com/qt/qtbase/commit/ffc8aac684e97bad1fb598883fa05ae66f7f1e4c