src/widgets/graphicsview/qgraphicsitem.cpp
@@ -28128,6 +28128,13 @@ name|pixmap
 operator|.
 name|size
 argument_list|()
+operator|/
+name|d
+operator|->
+name|pixmap
+operator|.
+name|devicePixelRatio
+argument_list|()
 argument_list|)
 operator|.
 name|adjusted
@@ -28166,6 +28173,13 @@ operator|->
 name|pixmap
 operator|.
 name|size
+argument_list|()
+operator|/
+name|d
+operator|->
+name|pixmap
+operator|.
+name|devicePixelRatio
 argument_list|()
 argument_list|)
 return|;
